syntax = "proto3";

package greeter;

service GreeterService {
  rpc Greet(GreetingRequest) returns (GreetingResponse) {}
}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string greeting = 1;
}
